@@ -1,6 +1,6 @@
 /* Copyright 2001 Netherlabs BV, bert.hubert@netherlabs.nl. See LICENSE 
    for more information.
-   $Id: spgsql.hh,v 1.3 2003/01/06 16:13:59 ahu Exp $  */
+   $Id: spgsql.hh,v 1.4 2003/10/11 19:57:19 ahu Exp $  */
 #ifndef SPGSQL_HH
 #define SPGSQL_HH
 using namespace std;
@@ -20,6 +20,7 @@ public:
   SSqlException sPerrorException(const string &reason);
   int doQuery(const string &query, result_t &result);
   int doQuery(const string &query);
+  int doCommand(const string &query);
   bool getRow(row_t &row);
   string escape(const string &str);    
   void setLog(bool state);
